# django-keycloack-login

./: LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
govbr_login/: apps.py  provider.py  urls.py  views.py
