[metadata]
name = django-govbr-login
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
author = Ivan Medeiros Jr
author_email = ivsmjunior@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.0
    django-allauth >= 0.54.0